[workspace]
members = [
	"2015/rust/1",
  "2015/rust/2",
  "2015/rust/3",
  "2015/rust/4",
  "2015/rust/5",
  "2015/rust/6",
  "2015/rust/7",
  "2015/rust/8",
  "2015/rust/9",
  "2015/rust/10",

  "2021/1",
  "2021/2",
  "2021/3",
  "2021/4",
  "2021/5",
  "2021/6",
  "2021/7",
  "2021/8",
  "2021/9",
  "2021/10",
  "2021/11",
  "2021/12",
  "2021/13",
  "2021/14",
  "2021/15",
  "2021/16",
  "2021/17",
  "2021/18",
  "2021/19",
  "2021/20",
  "2021/21",
  "2021/22",
]
