[workspace]
members = [
	"2015/rust/1",
  "2015/rust/2",
  "2015/rust/3",
  "2015/rust/4",
  "2015/rust/5",
  "2015/rust/6",
  "2015/rust/7",
  "2015/rust/8",
  "2015/rust/9",
  "2015/rust/10",
  "2015/rust/11",
  "2015/rust/12",
  "2015/rust/13",
  "2015/rust/14",
  "2015/rust/15",
  "2015/rust/16",
  "2015/rust/17",
  "2015/rust/18",
  "2015/rust/19",
  "2015/rust/20",
  "2015/rust/21",
  "2015/rust/22",
  "2015/rust/23",
  "2015/rust/24",
  "2015/rust/25",

  "2016/rust/01",
  "2016/rust/02",
  "2016/rust/03",
  "2016/rust/04",
  "2016/rust/05",
  "2016/rust/06",
  "2016/rust/07",
  "2016/rust/08",
  "2016/rust/09",
  "2016/rust/10",
  "2016/rust/11",
  "2016/rust/12",
  "2016/rust/13",
  "2016/rust/14",
  "2016/rust/15",
  "2016/rust/16",
  "2016/rust/17",
  "2016/rust/18",
  "2016/rust/19",

  "2021/1",
  "2021/2",
  "2021/3",
  "2021/4",
  "2021/5",
  "2021/6",
  "2021/7",
  "2021/8",
  "2021/9",
  "2021/10",
  "2021/11",
  "2021/12",
  "2021/13",
  "2021/14",
  "2021/15",
  "2021/16",
  "2021/17",
  "2021/18",
  "2021/19",
  "2021/20",
  "2021/21",
  "2021/22",

  "2024/1",
  "2024/2",
]
